--- a/src/main/resources/cn/wizool/bank/config/develop.properties
+++ b/src/main/resources/cn/wizool/bank/config/develop.properties
@@ -1,6 +1,6 @@
 jdbc.username = root
-jdbc.password = poiuyt
-jdbc.url = jdbc:mysql://10.0.2.2:3306/medias?characterEncoding=UTF-8
+jdbc.password = huijin
+jdbc.url = jdbc:mysql://127.0.0.1:3306/medias?characterEncoding=UTF-8
 jdbc.driver = com.mysql.jdbc.Driver
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.default_schema = medias
