--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,46 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-	<display-name>bank</display-name>
-	<context-param>
-		<param-name>servletPackages</param-name>
-		<param-value>cn.wizool.bank.servlet</param-value>
-	</context-param>
-	<context-param>
-		<param-name>times</param-name>
-		<param-value>40</param-value>
-	</context-param>
-	<context-param>
-		<param-name>filepath</param-name>
-		<param-value>/home/system/FILES</param-value>
-	</context-param>
-	<context-param>
-		<param-name>taskpath</param-name>
-		<param-value>/home/system/TASKS</param-value>
-	</context-param>
-	<context-param>
-		<param-name>backgroundImgPath</param-name>
-		<param-value>/home/system/IMG</param-value>
-	</context-param>
-	<context-param>
-		<param-name>uploaddir</param-name>
-		<param-value>/home/system/UPLOADDIR</param-value>
-	</context-param>
-	<!--<context-param> <param-name>filepath</param-name> <param-value>D:/TMP</param-value> 
-		</context-param> <context-param> <param-name>backgroundImgPath</param-name> 
-		<param-value>D:/backgroundImg</param-value> </context-param> -->
-
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<listener>
-		<listener-class>cn.wizool.bank.iwebutil.ServletCreateListener</listener-class>
-	</listener>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
-	<session-config>
-		<session-timeout>-1</session-timeout>
-	</session-config>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>medias</display-name>
+  <context-param>
+    <param-name>servletPackages</param-name>
+    <param-value>cn.wizool.bank.servlet</param-value>
+  </context-param>
+  <context-param>
+    <param-name>times</param-name>
+    <param-value>40</param-value>
+  </context-param>
+  <context-param>
+    <param-name>filepath</param-name>
+    <param-value>/home/system/FILES</param-value>
+  </context-param>
+  <context-param>
+    <param-name>taskpath</param-name>
+    <param-value>/home/system/TASKS</param-value>
+  </context-param>
+  <context-param>
+    <param-name>backgroundImgPath</param-name>
+    <param-value>/home/system/IMG</param-value>
+  </context-param>
+  <context-param>
+    <param-name>uploaddir</param-name>
+    <param-value>/home/system/UPLOADDIR</param-value>
+  </context-param>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>cn.wizool.bank.iwebutil.ServletCreateListener</listener-class>
+  </listener>
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+  <session-config>
+    <session-timeout>-1</session-timeout>
+  </session-config>
 </web-app>
