--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,7 @@
     <param-value>40</param-value>
   </context-param>
   <context-param>
+  	<description>文件共享中文件的存放位置</description>
     <param-name>filepath</param-name>
     <param-value>/home/zhangbo/FILES</param-value>
   </context-param>
@@ -18,10 +19,12 @@
     <param-value>/home/zhangbo/TASKS</param-value>
   </context-param>
   <context-param>
+  	<description>广告机背景图片存放位置</description>
     <param-name>backgroundImgPath</param-name>
     <param-value>/home/zhangbo/IMG</param-value>
   </context-param>
   <context-param>
+  	<description>上传文件的存放位置</description>
     <param-name>uploaddir</param-name>
     <param-value>/home/zhangbo/UPLOADDIR</param-value>
   </context-param>
